# itmo

./: .gitignore  Lab3  README.md  file.xml  index.html  line_h.asm  pom.xml  rofl.xml  script.php
WindowsProject1/Debug/: WindowsProject1.ilk
WindowsProject1/WindowsProject1/: WindowsProject1.cpp
applied-math/: Lab4
comp-math/: in.txt
comp-math/src/: Main.java
graphics/: letter.asm  line_v.asm  point.asm  point2.asm
graphics/WindowsProject1/: WindowsProject1.sln
io-systems/lab3/: README.md  virt_net_if.c
java-first-steps/lab3/: kek.xml  save.xml
lab1/: Makefile  README.md  char_dev.mod.c  proc_example.c  script.sh
lab1/src/: calculator.c  calculator.h  char_dev.c  file_handlers.c  file_handlers.h  proc_example.c
lab2/: README.md  groups.sh  nested_directories.sh
lab3/: README.md  task1.sh  task2.sh
lab4/: cat.perl
lab4/cat/: Makefile  cat.c  cat.h
lab4/head/: Makefile
lab4/xargs/: Makefile  xargs.c
lab5/: Makefile  server8.c  task10.c  task2_server.c  task3_client.c  task3_server.c  task4.c  task5.c  task7.c  task8_client.c  task9.c
lab5/lib/: load_avg.c  model.h
lab6/: Makefile  client.c  server.c  server_utils.c  server_utils.h  threading.c  threading.h
loc/: resources.properties  resources_bg_BG.properties  resources_es_MX.properties  resources_sr_RS.properties
software-testing/lab1/: pom.xml
src/Maths/: Interpolation.java  (+2 more)
system-programming/lab5/: CMakeLists.txt  task1_client.c  task1_server.c  task2_client.c  task6.c
system-programming/lab5/lib/: alphabet_utils.c  alphabet_utils.h  load_avg.h  stats.c  stats.h
(+148 files in other folders)
